# plum-claims

./: .dockerignore  .env.example  .gitignore  Caddyfile  LICENSE  Makefile  README.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.tls.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  calibration_map.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_claims.py  0002_indices_and_normalized.py  0003_users.py  0004_audit_log.py  0005_policy_versions.py  0006_timestamptz.py  0007_trace_entry_fields.py
backend/app/: config.py  deps_auth.py  main.py  worker.py
backend/app/agents/: extraction.py  nl_intake.py  semantic_map.py  verifier.py
backend/app/api/: assistant.py  auth.py  claims_read.py  common.py  eval.py  explain.py  intake.py  ops_actions.py  policy.py
backend/app/evalrunner/: decision_eval.py  extraction_eval.py  matching.py  message_quality.py  runner.py  synthetic.py
backend/app/fixtures/: loader.py  messy.py  renderer.py
backend/app/graph/: build.py  nodes.py  state.py  supervisor.py
backend/app/models/: schemas.py
backend/app/rules/: aggregator.py  base.py  coverage_exclusion.py  docgate.py  financial.py  fraud.py  limits.py  pre_auth.py  waiting_period.py
backend/app/services/: accumulation.py  audit.py  auth.py  calibration.py  confidence.py  conformal.py  correction.py  cost.py  counterfactual.py  crypto.py  extraction_cache.py  fraud_signals.py  gemini.py  idempotency.py  identity.py  log_filter.py  money.py  object_store.py  persistence.py  policy_engine.py  policy_rag.py  policy_store.py  preview_sample.py  ratelimit.py  registration.py  replay.py  (+5 more)
backend/loadtest/: decision_benchmark.py  locustfile.py  scale_projection.py
backend/scripts/: calibrate_confidence.py  download_eval_datasets.py  export_fixtures.py  recalibrate_from_outcomes.py  seed_demo_data.py
backend/tests/: conftest.py  test_adversarial.py  test_aggregator.py  test_api.py  test_api_surface.py  test_async.py  test_audit_fixes.py  test_auth.py  test_caching.py  test_caching_live.py  test_calibration.py  test_classify.py  test_confidence.py  test_confidence_loop.py  test_correction.py  test_counterfactual.py  test_data_layer.py  test_decision_eval.py  test_doc_encryption.py  test_docgate.py  test_documents.py  test_extraction_eval.py  test_extraction_live.py  test_financial.py  test_financial_properties.py  test_fraud_signals.py  test_gemini.py  test_graph_live.py  test_hardening.py  test_identity.py  test_loadtest.py  test_matching.py  test_member_features.py  test_message_quality.py  test_messy.py  test_missing_info.py  test_network_match.py  test_nl.py  test_operator_decision.py  test_ops.py  (+19 more)
(+61 files in other folders)
