[project]
name = "plum-claims"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115", "uvicorn[standard]>=0.30", "pydantic>=2.8", "pydantic-settings>=2.4",
  "langgraph>=0.4", "google-genai>=1.20", "sqlalchemy>=2.0", "psycopg[binary]>=3.2",
  "rapidfuzz>=3.9", "pillow>=10.4", "python-multipart>=0.0.9",
  "scikit-learn>=1.4",
  "celery[redis]>=5.3", "redis>=5.0",
  "alembic>=1.13", "minio>=7.2",
  # Self-issued JWT auth + RBAC (Round-4 backend; gated OFF by default). bcrypt is
  # used directly (not via passlib) to avoid the passlib 1.7.4 / bcrypt 5.x
  # version-probe breakage on Python 3.12+.
  "pyjwt>=2.8", "bcrypt>=4.0",
  # Fernet at-rest PHI encryption (app/services/crypto.py). Direct dependency —
  # previously present only transitively.
  "cryptography>=42",
]
[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-timeout>=2.3", "httpx>=0.27", "hypothesis>=6.100",
       "locust>=2.30"]

[tool.pytest.ini_options]
timeout = 300
markers = ["live: hits live Gemini API"]

[tool.pyright]
include = ["app"]
typeCheckingMode = "standard"
# The LangGraph state is a `total=False` TypedDict BY DESIGN: each node reads keys
# that are guaranteed present by the graph's topology (intake populates `submission`,
# the extract fan-out populates `extractions`, …), not by the static type system.
# Reading them with `state["x"]` is the idiomatic LangGraph pattern, so this single
# rule is disabled rather than papering every access with `.get()`/asserts. Every
# other type check stays ON.
reportTypedDictNotRequiredAccess = false

[tool.ruff.lint]
# Bug-catching rules (all of F*, plus E9/most of E*) stay ON. The codebase
# deliberately uses a compact one-statement-per-line style and one intentional
# import-ordering exception in main.py (LangSmith env vars must be exported
# before app.graph.build is imported), so the purely-stylistic codes below are
# disabled rather than mechanically rewritten across the whole tree.
ignore = [
  "E701",  # multiple statements on one line (colon)    — `if x is None: raise ...`
  "E702",  # multiple statements on one line (semicolon) — `total_in = ...; total_out = ...`
  "E401",  # multiple imports on one line                — `import json, logging, os`
  "E402",  # module-level import not at top              — intentional env-before-import in main.py
  "E741",  # ambiguous single-char variable name        — a handful of short-lived locals
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
